Implement Ansible-native inventory management with custom plugin and YAML config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,11 @@
 [ssh_connection]
 pipelining                      = True
 
+[inventory]
+enable_plugins = host_list, script, auto, yaml, ini, toml, gcp_oracle_inventory
+
 [defaults]
-inventory                       = ./inventory
+inventory_plugins               = ./inventory_plugins
 deprecation_warnings            = False
 become_method                   = sudo
 retry_files_enabled             = False
