Adjustments to use a named user instead of `SYS` for RMAN duplication

--- a/roles/dg-config/tasks/main.yml
+++ b/roles/dg-config/tasks/main.yml
@@ -123,7 +123,7 @@
             set -o pipefail
             {{ oracle_home }}/bin/sqlplus -s -L / as sysdba <<EOF
             whenever sqlerror exit failure
-            CREATE USER c##toolkit_dg_setup_user IDENTIFIED BY {{ dg_pass }};
+            CREATE USER c##toolkit_dg_setup_user IDENTIFIED BY "{{ dg_pass }}";
             GRANT sysdg TO c##toolkit_dg_setup_user;
             EOF
           environment:
@@ -134,32 +134,6 @@
           become: true
           become_user: "{{ oracle_user }}"
           no_log: true
-
-        - name: DG | Create a temporary file for transfer
-          tempfile:
-            state: file
-          register: temp_file
-
-        - name: DG | Fetch password file from primary
-          fetch:
-            src: "{{ oracle_base }}/dbs/orapw{{ oracle_sid }}"
-            dest: "{{ temp_file.path }}"
-            flat: true
-          delegate_to: primary1
-
-        - name: DG | Copy password file to standby
-          copy:
-            src: "{{ temp_file.path }}"
-            dest: "{{ oracle_base }}/dbs/orapw{{ oracle_sid }}"
-            owner: "{{ oracle_user }}"
-            group: "{{ oracle_group }}"
-            mode: "u=wr,go="
-
-        - name: DG | Remove temporary file
-          file:
-            path: "{{ temp_file.path }}"
-            state: absent
-          when: temp_file.path is defined
 
     - name: DG | Generate script for creating the Data Guard configuration
       template:
@@ -177,7 +151,7 @@
         set -o pipefail
         {{ oracle_home }}/bin/dgmgrl <<EOF
         {% if oracle_ver_base | float > 19.3 %}
-        connect c##toolkit_dg_setup_user/{{ dg_pass }}
+        connect c##toolkit_dg_setup_user/"{{ dg_pass }}"
         {% else %}
         connect /
         {% endif %}
