Oracle 21c specific Data Guard fixes (re-added password file copy)

--- a/roles/dg-config/tasks/dg_mode.yml
+++ b/roles/dg-config/tasks/dg_mode.yml
@@ -148,6 +148,7 @@
 
 - name: DG Mode | Capture the current Data Guard configuration
   shell: |
+    sleep 30  # Wait for previous changes to stabilize
     set -o pipefail
     {{ oracle_home }}/bin/dgmgrl / <<EOF
     show configuration verbose
