Moved temp password file cleanup tasks to an `always:` module

--- a/roles/dg-config/tasks/main.yml
+++ b/roles/dg-config/tasks/main.yml
@@ -165,6 +165,7 @@
             group: "{{ oracle_group }}"
             mode: "u=wr,go="
 
+      always:
         - name: DG | Remove temporary file
           file:
             path: "{{ temp_file.path }}"
