Show better errors on ASM installs without ASM disks
This change hardens the Oracle toolkit's configuration validation to prevent `JSONDecodeError` and `NoneType` crashes during Non-ASM (file system) deployments while ensuring mandatory storage parameters are provided.

* **Hardened Variable Evaluation:** Updated `asm_disks` in `group_vars/all.yml` to use `default('', true)`, ensuring that if a file lookup returns `None`, it is treated as an empty string to avoid `length` filter crashes on `NoneType` objects.
* **Template Safety:** Modified the `asm_disks` Jinja2 logic to verify `asm_disk_input` is non-empty before attempting `from_json`, preventing the toolkit from crashing during initial variable expansion when ASM is the default but no disks are defined.
* **Consolidated Validation:** Moved ASM disk group verification from `roles/common/tasks/readiness_checks.yml` to `validate-config.yml` to perform static parameter checks earlier in the deployment lifecycle.
* **Explicit Error Messaging:** Added a dedicated assertion in `validate-config.yml` that triggers when Grid Infrastructure (`gi_install`) is required but no ASM disks are provided. This informs users to either provide `--ora-asm-disks` or explicitly set `--ora-disk-mgmt FS` for file system deployments.

Sample output:
https://gist.github.com/mfielding/c26df115c9869bea3105702aacf73925

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -15,7 +15,7 @@
 ---
 ################################################################################
 #
-# This file defines the oracle-toolkit's internal variables and sets default values for configuration parameters. 
+# This file defines the oracle-toolkit's internal variables and sets default values for configuration parameters.
 # These defaults are applied when a user does not explicitly provide a value for a variable via the install-oracle.sh script.
 #
 ################################################################################
@@ -115,8 +115,8 @@ data_mounts_definition_file: "{{ ora_data_mounts | default('data_mounts_config.j
 data_mounts_input: "{{ ora_data_mounts_json if (ora_data_mounts_json is defined and ora_data_mounts_json != '') else lookup('file', data_mounts_definition_file, errors='ignore') }}"
 oracle_user_data_mounts: "{{ (data_mounts_input | from_json) if (data_mounts_input is string) else data_mounts_input }}"
 asm_definition_file: "{{ ora_asm_disks | default('asm_disk_config.json',true) }}"
-asm_disk_input: "{{ ora_asm_disks_json if (ora_asm_disks_json is defined and ora_asm_disks_json != '') else lookup('file', asm_definition_file, errors='ignore') }}"
-asm_disks: "{% if gi_install %}{{ (asm_disk_input | from_json) if (asm_disk_input is string) else asm_disk_input }}{% else %}[]{% endif %}"
+asm_disk_input: "{{ ora_asm_disks_json if (ora_asm_disks_json is defined and ora_asm_disks_json != '') else lookup('file', asm_definition_file, errors='ignore') | default('', true) }}"
+asm_disks: "{% if gi_install and (asm_disk_input | default('') | length > 0) %}{{ (asm_disk_input | from_json) if (asm_disk_input is string) else asm_disk_input }}{% else %}[]{% endif %}"
 asm_sid: "{% if db_config_type == 'SI' %}+ASM{% else %}+ASM{{ instance_num }}{% endif %}"
 u01_lun: "{{ (ora_u01_lun | default('',true)) | lower }}"
 
