Update AR repository config
* For clarity and consistency, removing "AR Mirror" references in favor
  or "AR Repo" or "AR Remote Repo"
* Added (and documented) a new parameter --ar-repo-url with the base URL
of the Artifact Registry remote repo
* Added a validation to error out if attempted with free edition
* I couldn't find a clean way to avoid the disabling of all repositories,
as we actually want to fix yum updates post-install too. So adding some
verbiage to the user guide.
* Keeping NTP as-is, as a RAC-only thing; NTP is deprecated in our current
supported OSes anyway.
* Updating data guard presubmit tests to use this AR configuration, and
  not to have Internet access.  (Free edition tests remain as-is.)

Sample output from an install run in a VPC without Internet access:
https://gist.github.com/mfielding/7b474a2142f1554481ec9ffab3e5c345

--- a/roles/base-provision/tasks/main.yml
+++ b/roles/base-provision/tasks/main.yml
@@ -62,9 +62,10 @@
 
 - name: Set up Artifact Registry mirrors if enabled
   include_tasks:
-    file: ar_mirror_setup.yml
+    file: ar_repo_setup.yml
   when:
     - install_os_packages
+    - ar_repo_url is defined and ar_repo_url | length > 0
   tags: os-packages
 
 - name: Install required base OS packages
