--- a/roles/base-provision/tasks/ar_repo_setup.yml
+++ b/roles/base-provision/tasks/ar_repo_setup.yml
@@ -33,8 +33,8 @@
     - name: ar_mirror_setup | Configure project-specific mirrors
       yum_repository:
         name: "ar-{{ item }}"
-        description: "Internal Artifact Registry mirror for {{ item }}"
-        baseurl: "https://us-central1-yum.pkg.dev/remote/gcp-oracle-sandbox/oracle-linux-{{ ansible_distribution_major_version }}-{{ item }}-mirror"
+        description: "Internal Artifact Registry repository for {{ item }}"
+        baseurl: "{{ ar_repo_url }}/oracle-linux-{{ ansible_distribution_major_version }}-{{ item }}-repo"
         enabled: yes
         gpgcheck: yes
         repo_gpgcheck: no
